added charactors info

--- a/test.html
+++ b/test.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Checking image</title>
+        <link rel="icon" href="https://miro.medium.com/max/600/0*9xneIbQedcE-LwU5.jpg">
         <style type="text/css">
 
         </style>
@@ -36,15 +37,15 @@
             <P>Mr. Incredible has the most incredible family in the world. All of their family members are super heros. Cool Right?<br> Check their awsome family members from below links.</P>
             
             <ul>
-                <li><a href="https://en.wikipedia.org/wiki/List_of_The_Incredibles_characters"> Helen Parr (Elastigirl) </a></li>
-                <li><a href="https://en.wikipedia.org/wiki/List_of_The_Incredibles_characters"> Violet Parr </a></li>
-                <li><a href="https://en.wikipedia.org/wiki/List_of_The_Incredibles_characters"> Dash Parr </a></li>
-                <li><a href="https://en.wikipedia.org/wiki/List_of_The_Incredibles_characters">Jack-Jack Parr</a></li>
+                <li><a target="_blank" href="https://en.wikipedia.org/wiki/List_of_The_Incredibles_characters"> Helen Parr (Elastigirl) </a></li>
+                <li><a target="_blank" href="https://en.wikipedia.org/wiki/List_of_The_Incredibles_characters"> Violet Parr </a></li>
+                <li><a target="_blank" href="https://en.wikipedia.org/wiki/List_of_The_Incredibles_characters"> Dash Parr </a></li>
+                <li><a target="_blank" href="https://en.wikipedia.org/wiki/List_of_The_Incredibles_characters">Jack-Jack Parr</a></li>
             </ul>
         </main>
-
+        <!-- footer element -->
         <footer>
-
+            <p>This is my first webpage. Copyright symbol is just for fun.&copy;</p>
         </footer>
 
     </body>
