--- a/test.html
+++ b/test.html
@@ -77,6 +77,7 @@
             color: grey;
             font-style:italic;
             margin-top: 0;
+            text-align: center;
         }
 
     </style>    
