--- a/test.html
+++ b/test.html
@@ -77,7 +77,7 @@
             color: grey;
             font-style:italic;
             margin-top: 0;
-            text-align: center;
+            margin-left: 400px;
         }
 
     </style>    
