--- a/test.html
+++ b/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Checking image</title>
+        <title>Mr. Incredible</title>
         <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P" rel="stylesheet">
         <link rel="icon" href="https://miro.medium.com/max/600/0*9xneIbQedcE-LwU5.jpg">
     
